src/test/contracts/top_level_patterns/negative/jsligo/ticket_tuple.jsligo
const [b, _] = [Option.unopt(Mavryk.create_ticket("one", 10 as nat)), 1];

type storage = ticket<string>;

@entry
const main = (_p: unit, _s: storage): [list<operation>, storage] =>
  [list([]), Option.unopt(Mavryk.join_tickets([b, b]))];
